--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,7 @@
                     <label for="newburger">Order Fresh Burger</label>
                     <input type="text" id="newburger" name="burger">
                     <button type="submit" class="btn btn-success" id="addburger">
-                        <span class="fa a-thumbs-up"></span>
+                        <span class="fa fa-thumbs-up"></span>
                     </button>
                 </div>
             </form>
